--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0",
     "jquery": "^1.9.1",
+    "mdbootstrap": "^4.19.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
